--- a/index.html
+++ b/index.html
@@ -1,16 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
-</head>
-<body>
+    <title>Color Flipper</title>
+<style>
+
+/* GitHub */
+/* CSS selects by ID to override default style (loaded earlier: higher priority) */
+.repository-content > div #gitpod-btn-container.gitpod-file-btn,
+.file-navigation #gitpod-btn-container {
+    margin-left: 6px;
+}
+/* Handle New Repository */
+.repository-content > div #gitpod-btn-container.gitpod-file-btn,
+.TableObject #gitpod-btn-container {
+    margin-left: 0px;
+    margin-right: 8px;
+}
+
+.no-container {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* Bitbucket */
+#commit-header .commit-actions {
+    width: 305px;
+}
+
+.bitbucket-button {
+    background: rgba(9, 30, 66, 0.04);
+    border: none;
+    outline: 0;
+    height: 2.28571429em;
+    line-height: 1.57142857em;
+    box-sizing: border-box;
+    border-radius: 3.01px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 4px;
+    padding: 4px 10px;
+    vertical-align: baseline;
+    white-space: nowrap;
+}
+
+.bitbucket-button:hover {
+    background: rgba(9, 30, 66, 0.08);
+}
+
+.bitbucket-button a, .aui-button a {
+    text-decoration: none;
+    color: #42526e !important;
+    font-family: inherit;
+    font-size: 14px;
+    font-variant: normal;
+    font-weight: 500;
+}
+
+.bitbucket-button a:focus {
+    outline: none;
+}</style></head>
+<body contenteditable="false">
+    <nav>
+        <div class="nav-center">
+            <h4>color Flipper</h4>
+            <ul class="nav-links">
+                <li> <a href="index.html">simple</a></li>
+                <li> <a href="hex.html"> hex </a></li>
+            </ul>
+        </div>
+
+    </nav>
+<main>
+    <div class="container">
+        <h2> Background Color : <span class="color">#f1f5f8 </span></h2>
+       <button class="btn btn-hero" id="btn"> Click Me</button>
+    
+    </div>
+</main>
 
 
+   <script src="assets/js/app.js"></script> 
 
-   <script src="assets/js/script.js"></script> 
-</body>
-</html>
+</body></html>
