--- a/hex.html
+++ b/hex.html
@@ -83,6 +83,14 @@
         <h2>Background Color : <span class="color">hello #f1f5f8</span></h2>
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
+      <div class="container">
+        <h2>Counter</h2>
+        <h2><span class="value">0</span></h2>
+        <button class="btn btn-hero">Increase</button>
+        <button class="btn btn-hero">Decrease</button>
+        <button class="btn btn-hero">Reset</button>
+        
+      </div>
     </main>
     <!-- javascript -->
     <script src="hex.js"></script>
