--- a/hex.html
+++ b/hex.html
@@ -84,8 +84,8 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
       <div class="container">
-        <h1>Counter:
-        <span id="value">0</span> </h1>
+        <h2>Counter: </h2>
+        <span id="value">0</span> 
         <div class="button-container">
          
           <button class="btn reset">reset</button>
